--- a/simple-express/package.json
+++ b/simple-express/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "pug": "^3.0.2"
   },
